--- a/README.adoc
+++ b/README.adoc
@@ -19,7 +19,7 @@ It is very easy to analyze a C, C++ and Objective-C project with SonarCloud http
 . In your `.gitlab-ci.yml` file:
 .. As the `.pre` stage  stage:
 ... Download the https://docs.sonarcloud.io/advanced-setup/ci-based-analysis/sonarscanner-cli/[Sonar Scanner]
-... Download the https://docs.sonarcloud.io/advanced-setup/languages/c-c-objective-c/#header-4[Build Wrapper]
+... Download the https://docs.sonarcloud.io/advanced-setup/languages/c-c-objective-c/#analysis-steps-using-build-wrapper[Build Wrapper]
 ... Push both binaries to cache, so they can be used in next step
 .. As part of the `build` stage: 
 ... Install autotools-dev package
