--- a/README.adoc
+++ b/README.adoc
@@ -37,7 +37,7 @@ You can take a look at the link:sonar-project.properties[sonar-project.propertie
 = Documentation
 
 - https://docs.sonarcloud.io/advanced-setup/languages/c-c-objective-c/[Documentation of the C, C++ and Objective-C plugin and its Build Wrapper]
-- https://docs.sonarcloud.io/getting-started/azure-devops/[Documentation of using SonarCloud with Azure DevOps]
+- https://docs.sonarcloud.io/getting-started/gitlab/[Documentation of using SonarCloud with GitLab CI]
 - https://docs.sonarcloud.io/advanced-setup/languages/c-c-objective-c/#analysis-cache[Configuring C, C++ and Objective-C analysis cache]
 - https://docs.sonarcloud.io/advanced-setup/languages/c-c-objective-c/#parallel-code-scan[Configuring multithreaded execution]
 - https://docs.sonarcloud.io/advanced-setup/languages/c-c-objective-c/#analysis-steps-using-compilation-database[Using compilation database (compile_commands.json)]
